@@ -86,4 +86,13 @@ public class CleanerTest {
         String cleanHtml = Jsoup.clean(h, Whitelist.basicWithImages());
         assertEquals("<img alt=\"\" />", cleanHtml);
     }
+
+    @Test public void testIsValid() {
+        String ok = "<p>Test <b>OK</b></p>";
+        String nok1 = "<p><script></script>Not <b>OK</b></p>";
+        String nok2 = "<p align=right>Test <b>OK</b></p>";
+        assertTrue(Jsoup.isValid(ok, Whitelist.basic()));
+        assertFalse(Jsoup.isValid(nok1, Whitelist.basic()));
+        assertFalse(Jsoup.isValid(nok2, Whitelist.basic()));
+    }
 }
